--- a/QuickStart/inv_NACA0012.cfg
+++ b/QuickStart/inv_NACA0012.cfg
@@ -172,7 +172,7 @@ TIME_DISCRE_ADJFLOW= EULER_IMPLICIT
 % Kind of deformation (NO_DEFORMATION, TRANSLATION, ROTATION, SCALE,
 %                      FFD_SETTING, FFD_NACELLE
 %                      FFD_CONTROL_POINT, FFD_CAMBER, FFD_THICKNESS, FFD_TWIST
-%                      FFD_CONTROL_POINT_2D, FFD_CAMBER_2D, FFD_THICKNESS_2D, FFD_TWIST_2D,
+%                      FFD_CONTROL_POINT_2D, FFD_CAMBER_2D, FFD_THICKNESS_2D,
 %                      HICKS_HENNE, SURFACE_BUMP)
 DV_KIND= HICKS_HENNE
 %
@@ -196,7 +196,6 @@ DV_MARKER= ( airfoil )
 % - FFD_CONTROL_POINT_2D ( FFD_BoxTag, i_Ind, j_Ind, x_Disp, y_Disp )
 % - FFD_CAMBER_2D ( FFD_BoxTag, i_Ind )
 % - FFD_THICKNESS_2D ( FFD_BoxTag, i_Ind )
-% - FFD_TWIST_2D ( FFD_BoxTag, x_Orig, y_Orig )
 % - HICKS_HENNE ( Lower Surface (0)/Upper Surface (1)/Only one Surface (2), x_Loc )
 % - SURFACE_BUMP ( x_Start, x_End, x_Loc )
 DV_PARAM= ( 1, 0.5 )
