--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1466,7 +1466,7 @@ ADAPT_BOUNDARY= YES
 %                      FFD_SETTING, FFD_NACELLE,
 %                      FFD_CONTROL_POINT, FFD_CAMBER, FFD_THICKNESS, FFD_TWIST
 %                      FFD_CONTROL_POINT_2D, FFD_CAMBER_2D, FFD_THICKNESS_2D,
-%                      FFD_TWIST_2D, HICKS_HENNE, SURFACE_BUMP, SURFACE_FILE)
+%                      HICKS_HENNE, SURFACE_BUMP, SURFACE_FILE)
 DV_KIND= FFD_SETTING
 %
 % Marker of the surface in which we are going apply the shape deformation
@@ -1489,7 +1489,6 @@ DV_MARKER= ( airfoil )
 % - FFD_CONTROL_POINT_2D ( FFD_BoxTag, i_Ind, j_Ind, x_Disp, y_Disp )
 % - FFD_CAMBER_2D ( FFD_BoxTag, i_Ind )
 % - FFD_THICKNESS_2D ( FFD_BoxTag, i_Ind )
-% - FFD_TWIST_2D ( FFD_BoxTag, x_Orig, y_Orig )
 % - HICKS_HENNE ( Lower Surface (0)/Upper Surface (1)/Only one Surface (2), x_Loc )
 % - SURFACE_BUMP ( x_Start, x_End, x_Loc )
 DV_PARAM= ( 1, 0.5 )
@@ -1842,7 +1841,6 @@ REORIENT_ELEMENTS= YES
 %    FFD_CONTROL_POINT_2D   (  19, Scale | Mark. List | FFD_BoxTag, i_Ind, j_Ind, x_Mov, y_Mov )
 %    FFD_CAMBER_2D          (  20, Scale | Mark. List | FFD_BoxTag, i_Ind )
 %    FFD_THICKNESS_2D       (  21, Scale | Mark. List | FFD_BoxTag, i_Ind )
-%    FFD_TWIST_2D           (  22, Scale | Mark. List | FFD_BoxTag, x_Orig, y_Orig )
 %    HICKS_HENNE            (  30, Scale | Mark. List | Lower(0)/Upper(1) side, x_Loc )
 %    ANGLE_OF_ATTACK        ( 101, Scale | Mark. List | 1.0 )
 %
