Fix unit from energy to power in config_template

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -867,12 +867,12 @@ STREAMWISE_PERIODIC_OUTLET_HEAT= 0.0
 MARKER_EULER= ( airfoil )
 %
 % Navier-Stokes (no-slip), constant heat flux wall  marker(s) (NONE = no marker)
-% Format: ( marker name, constant heat flux (J/m^2), ... )
+% Format: ( marker name, constant heat flux (W/m^2), ... )
 MARKER_HEATFLUX= ( NONE )
 %
 % Navier-Stokes (no-slip), heat-transfer/convection wall marker(s) (NONE = no marker)
 % Available for compressible and incompressible flow.
-% Format: ( marker name, constant heat-transfer coefficient (J/(K*m^2)), constant reservoir Temperature (K) ... )
+% Format: ( marker name, constant heat-transfer coefficient (W/(K*m^2)), constant reservoir Temperature (K) ... )
 MARKER_HEATTRANSFER= ( NONE )
 %
 % Navier-Stokes (no-slip), isothermal wall marker(s) (NONE = no marker)
