check config and change parallel_regression.py

--- a/TestCases/deformation/cst/naca0012.cfg
+++ b/TestCases/deformation/cst/naca0012.cfg
@@ -2,16 +2,16 @@
 %
 % Euler wall boundary marker(s) (NONE = no marker)
 % Implementation identical to MARKER_SYM.
-MARKER_EULER= ( upper, lower, te )
+MARKER_EULER= ( airfoil )
 % Far-field boundary marker(s) (NONE = no marker)
-MARKER_FAR= ( far )
+MARKER_FAR= ( farfield )
 
 
 
 % ----------------------- GEOMETRY EVALUATION PARAMETERS ----------------------%
 %
 % Marker(s) of the surface where geometrical based function will be evaluated
-GEO_MARKER= ( upper, lower, te )
+GEO_MARKER= ( airfoil )
 %
 % Description of the geometry to be analyzed (AIRFOIL, WING)
 GEO_DESCRIPTION= AIRFOIL
@@ -42,7 +42,7 @@ GEO_MODE= FUNCTION
 DV_KIND= CST,CST
 %
 % Marker of the surface in which we are going apply the shape deformation
-DV_MARKER= ( upper, lower, te )
+DV_MARKER= ( airfoil )
 %
 % Parameters of the shape deformation
 % - NO_DEFORMATION ( 1.0 )
@@ -71,13 +71,13 @@ DV_VALUE= 0.3, 0.5
 % ------------------------- INPUT/OUTPUT FILE INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= naca0012.cgns
+MESH_FILENAME= mesh_NACA0012_inv.su2
 %
 % Mesh input file format (SU2, CGNS)
-MESH_FORMAT= CGNS
+MESH_FORMAT= SU2
 %
 % Mesh output file
-MESH_OUT_FILENAME= naca0012.su2
+MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
 SOLUTION_FILENAME= solution_flow.dat
