--- a/TestCases/deformation/cst/naca0012.cfg
+++ b/TestCases/deformation/cst/naca0012.cfg
@@ -71,7 +71,7 @@ DV_VALUE= 0.3, 0.5
 % ------------------------- INPUT/OUTPUT FILE INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= mesh_NACA0012_inv.su2
+MESH_FILENAME= ../naca0012/mesh_NACA0012_inv.su2
 %
 % Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
