--- a/TestCases/deformation/cst/naca0012.cfg
+++ b/TestCases/deformation/cst/naca0012.cfg
@@ -63,10 +63,10 @@ DV_MARKER= ( airfoil )
 % - FFD_THICKNESS_2D ( FFD_BoxTag, i_Ind )
 % - HICKS_HENNE ( Lower Surface (0)/Upper Surface (1)/Only one Surface (2), x_Loc )
 % - SURFACE_BUMP ( x_Start, x_End, x_Loc )
-DV_PARAM= (0, 5, 7);(1, 2, 6)
+DV_PARAM= (0, 5, 7);(1, 5, 10)
 %
 % Value of the shape deformation
-DV_VALUE= 0.3, 0.5
+DV_VALUE= -0.5,0.5
 
 % ------------------------- INPUT/OUTPUT FILE INFORMATION --------------------------%
 %
