--- a/TestCases/deformation/cst/naca0012.cfg
+++ b/TestCases/deformation/cst/naca0012.cfg
@@ -70,6 +70,8 @@ DV_VALUE= -0.5,0.5
 
 % ------------------------- INPUT/OUTPUT FILE INFORMATION --------------------------%
 %
+DEFORM_CONSOLE_OUTPUT= YES
+%
 % Mesh input file
 MESH_FILENAME= ../naca0012/mesh_NACA0012_inv.su2
 %
