--- a/config_template.cfg
+++ b/config_template.cfg
@@ -226,10 +226,6 @@ INC_DENSITY_MODEL= CONSTANT
 % Solve the energy equation in the incompressible flow solver
 INC_ENERGY_EQUATION = NO
 %
-% Initial density for incompressible flows
-% (1.2886 kg/m^3 by default (air), 998.2 Kg/m^3 (water))
-INC_DENSITY_INIT= 1.2886
-%
 % Initial velocity for incompressible flows (1.0,0,0 m/s by default)
 INC_VELOCITY_INIT= ( 1.0, 0.0, 0.0 )
 %
@@ -339,6 +335,10 @@ CRITICAL_PRESSURE= 3588550.0
 %
 % Acentri factor (0.035 (air))
 ACENTRIC_FACTOR= 0.035
+%
+% Constant density for incompressible flows when CONSTANT_DENSITY models is used.
+% (1.2886 kg/m^3 by default (air), 998.2 Kg/m^3 (water))
+DENSITY_CONSTANT= 1.2886
 %
 % Thermodynamics(operating) Pressure (101325 Pa default value, only for incompressible flow and FLUID_MIXTURE)
 THERMODYNAMIC_PRESSURE= 101325.0
