Added driver for one-shot approach

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -163,6 +163,7 @@ su2_cfd_src += files(['drivers/CDriver.cpp',
                       'drivers/CSinglezoneDriver.cpp',
                       'drivers/CDiscAdjMultizoneDriver.cpp',
                       'drivers/CDiscAdjSinglezoneDriver.cpp',
+                      'drivers/COneShotSinglezoneDriver.cpp',
                       'drivers/CDummyDriver.cpp',
                       'drivers/CDriverBase.cpp'])
 
