thermodynamics pressure update

--- a/TestCases/incomp_navierstokes/cylinder/poly_cylinder.cfg
+++ b/TestCases/incomp_navierstokes/cylinder/poly_cylinder.cfg
@@ -30,7 +30,7 @@ FLUID_MODEL= INC_IDEAL_GAS_POLY
 SPECIFIC_HEAT_CP= 1004.703
 MOLECULAR_WEIGHT= 28.96
 CP_POLYCOEFFS= ( 1004.703, 0.1, 0.0, 0.0, 0.0)
-THERMODYNAMIC_PRESSURE = 17.39862
+THERMODYNAMIC_PRESSURE = 17.39861946
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
