--- a/TestCases/coupled_cht/disc_adj_incomp_2d/flow_cylinder.cfg
+++ b/TestCases/coupled_cht/disc_adj_incomp_2d/flow_cylinder.cfg
@@ -36,7 +36,7 @@ INC_NONDIM= DIMENSIONAL
 FLUID_MODEL= INC_IDEAL_GAS
 SPECIFIC_HEAT_CP= 1004.703
 MOLECULAR_WEIGHT= 28.96
-THERMODYNAMIC_PRESSURE = 17.39862
+THERMODYNAMIC_PRESSURE = 17.39861946
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
