--- a/TestCases/disc_adj_incomp_navierstokes/cylinder/heated_cylinder.cfg
+++ b/TestCases/disc_adj_incomp_navierstokes/cylinder/heated_cylinder.cfg
@@ -27,7 +27,7 @@ INC_TEMPERATURE_INIT= 288.15
 FLUID_MODEL= INC_IDEAL_GAS
 SPECIFIC_HEAT_CP= 1004.703
 MOLECULAR_WEIGHT= 28.96
-THERMODYNAMIC_PRESSURE = 17.3986
+THERMODYNAMIC_PRESSURE = 17.39861946
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
