--- a/TestCases/radiation/p1adjoint/configp1adjoint.cfg
+++ b/TestCases/radiation/p1adjoint/configp1adjoint.cfg
@@ -29,7 +29,7 @@ INC_NONDIM = DIMENSIONAL
 FLUID_MODEL = INC_IDEAL_GAS
 SPECIFIC_HEAT_CP = 1004.703
 MOLECULAR_WEIGHT = 28.96
-THERMODYNAMIC_PRESSURE = 34.45028
+THERMODYNAMIC_PRESSURE = 34.45027624
 
 VISCOSITY_MODEL = SUTHERLAND
 MU_REF = 1.0E-5
