--- a/config_template.cfg
+++ b/config_template.cfg
@@ -2266,7 +2266,7 @@ EXTRA_HEAT_ZONE_OUTPUT= -1
 % Mesh input file
 MESH_FILENAME= mesh_NACA0012_inv.su2
 %
-% Mesh input file format (SU2, CGNS, RECTANGLE, BOX)
+% Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
 %
 % List of the number of grid points in the RECTANGLE or BOX grid in the x,y,z directions. (default: (33,33,33) ).
