Change to CFlowOutput to fix segfault. Update to temporary les debug test case.

--- a/TestCases/les_debug/channel/debug_wmles_7.4.cfg
+++ b/TestCases/les_debug/channel/debug_wmles_7.4.cfg
@@ -56,7 +56,7 @@ TIME_DOMAIN= YES
 TIME_MARCHING= TIME_STEPPING
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
-UNST_CFL_NUMBER= 0.01
+UNST_CFL_NUMBER= 1.0
 %
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
@@ -106,22 +106,11 @@ REF_LENGTH= 0.1
 %              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY)
 FLUID_MODEL= STANDARD_AIR
 %
-% Ratio of specific heats (1.4 default and the value is hardcoded
-%                          for the model STANDARD_AIR, compressible only)
-GAMMA_VALUE= 1.4
-%
-% Specific gas constant (287.058 J/kg*K default and this value is hardcoded
-%                        for the model STANDARD_AIR, compressible only)
-GAS_CONSTANT= 287.058
-%
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
 % Viscosity model (SUTHERLAND, CONSTANT_VISCOSITY, POLYNOMIAL_VISCOSITY).
 VISCOSITY_MODEL= SUTHERLAND
-%
-% Molecular Viscosity that would be constant (1.716E-5 by default)
-MU_CONSTANT= 1.716E-5
 %
 
 % --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
@@ -147,21 +136,19 @@ PRANDTL_TURB= 0.90
 BODY_FORCE= YES
 %
 % Vector of body force values (BodyForce_X, BodyForce_Y, BodyForce_Z)
-%BODY_FORCE_VECTOR= ( 100.8773, 0.0, 0.0 )
 BODY_FORCE_VECTOR= ( 50.4386, 0.0, 0.0 )
+%
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
 % Navier-Stokes (no-slip), isothermal wall marker(s) (NONE = no marker)
 % Format: ( marker name, constant wall temperature (K), ... )
-%MARKER_ISOTHERMAL= ( y_0, 273.15, y_1, 273.15 )
 MARKER_ISOTHERMAL= ( y_0, 273.15 )
 %
 % Periodic boundary marker(s) (NONE = no marker)
 % Format: ( periodic marker, donor marker, rotation_center_x, rotation_center_y,
 % rotation_center_z, rotation_angle_x-axis, rotation_angle_y-axis,
 % rotation_angle_z-axis, translation_x, translation_y, translation_z, ... )
-%MARKER_PERIODIC= ( x_0, x_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.5133, 0.0, 0.0, z_0, z_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.9425 )
 MARKER_PERIODIC= ( x_0, x_1, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 2.5133, 0.0, 0.0 )
 %
 % Symmetry boundary marker(s) (NONE = no marker)
@@ -170,8 +157,7 @@ MARKER_SYM= ( y_1, z_0, z_1 )
 %
 % Marker(s) where wall functions are applied
 MARKER_WALL_FUNCTIONS= ( y_0, LOGARITHMIC_WALL_MODEL, 0.1, 1.1, 60 )
-
-
+%
 
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
@@ -181,8 +167,11 @@ MARKER_PLOTTING= ( y_0 )
 % Marker(s) of the surface where the non-dimensional coefficients are evaluated.
 MARKER_MONITORING= ( y_0 )
 %
-MARKER_ANALYZE= ( x_0 )
-
+MARKER_ANALYZE= ( x_0, x_1 )
+%
+% Method to compute the average value in MARKER_ANALYZE (AREA, MASSFLUX).
+MARKER_ANALYZE_AVERAGE = AREA
+%
 
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
@@ -224,6 +213,10 @@ ENTROPY_FIX_COEFF= 0.0
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= RUNGE-KUTTA_EXPLICIT
 %
+% Use the vectorized version of the selected numerical method (available for JST family and Roe).
+% SU2 should be compiled for an AVX or AVX512 architecture for best performance.
+USE_VECTORIZATION= NO 
+%
 
 % ------------------------- SCREEN/HISTORY VOLUME OUTPUT --------------------------%
 %
@@ -247,7 +240,7 @@ HISTORY_WRT_FREQ_TIME= 1
 HISTORY_WRT_FREQ_INNER= 1
 %
 % list of writing frequencies corresponding to the list in OUTPUT_FILES
-OUTPUT_WRT_FREQ= 1
+OUTPUT_WRT_FREQ= 5
 %
 % Output the performance summary to the console at the end of SU2_CFD
 WRT_PERFORMANCE= YES
@@ -294,4 +287,4 @@ READ_BINARY_RESTART= YES
 %
 % Reorient elements based on potential negative volumes (YES/NO)
 REORIENT_ELEMENTS= YES
-
+%
