--- a/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
+++ b/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
@@ -13,13 +13,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %----------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION -------------------------%
-% Solver type (EULER, NAVIER_STOKES, RANS,
-%              INC_EULER, INC_NAVIER_STOKES, INC_RANS
-%              FEM_EULER, FEM_NAVIER_STOKES, FEM_RANS, FEM_LES,
-%              HEAT_EQUATION_FVM, ELASTICITY)
 SOLVER= RANS
 %
-% Specify turbulence model (NONE, SA, SA_NEG, SST, SA_E, SA_COMP, SA_E_COMP, SST_SUST)
+% Specify turbulence model (NONE, SA, SST)
 KIND_TURB_MODEL= SA
 %
 % Turbulence intensity at freestream
