config options for CG and Axis, other minor cleanup

--- a/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
+++ b/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
@@ -106,12 +106,12 @@ MARKER_ACTDISK = ( ACTDISK_IN, ACTDISK_OUT , 0.0, 0.0, 12715.2, 0.0, 0.0, 12715.
 %(inlet face marker, outlet face marker, X_CG of inlet, Y_CG of inlet, Z_CG of inlet ,
 % X_CG of outlet, Y_CG of outlet, Z_CG of outlet), X_CG, Y_CG, Z_CG of both inlet and
 % outlet markers should be same
-MARKER_ACTDISK_CG= ( ACTDISK_IN, ACTDISK_OUT , 0.0, 0.0, 0.0, 0.0,0.0,0.0)
+MARKER_ACTDISK_BEM_CG= ( ACTDISK_IN, ACTDISK_OUT, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0 )
 %Actuator Disk Axis
 %(inlet face marker, outlet face marker,
 % axis_x, axis_y, axis_z of inlet, axis_x, axis_y, axis_z of outlet),
 % axis of both inlet and outlet markers should be same
-MARKER_ACTDISK_AXIS= ( ACTDISK_IN, ACTDISK_OUT , 1.0, 0.0, 0.0, 1.0,0.0,0.0)
+MARKER_ACTDISK_BEM_AXIS= ( ACTDISK_IN, ACTDISK_OUT, 1.0, 0.0, 0.0,  1.0, 0.0, 0.0 )
 % Input file containing the propeller section data and aerodynamic details of blade sections
 BEM_PROP_FILENAME = prop_geom_alfclcd_data.txt
 % Propeller blade angle (Degrees) at 0.75*Radius for the current calculation
