--- a/config_template.cfg
+++ b/config_template.cfg
@@ -949,7 +949,12 @@ MARKER_ACTDISK= ( NONE )
 % Blade element: ( inlet face marker, outlet face marker,
 %                  X_CG of inlet, Y_CG of inlet, Z_CG of inlet,
 %                  X_CG of outlet, Y_CG of outlet, Z_CG of outlet )
-MARKER_ACTDISK_CG= ( NONE )
+MARKER_ACTDISK_BEM_CG= ( NONE )
+%
+% Blade element: ( inlet face marker, outlet face marker,
+%                  X_Axis of inlet, Y_Axis of inlet, Z_Axis of inlet,
+%                  X_Axis of outlet, Y_Axis of outlet, Z_Axis of outlet )
+MARKER_ACTDISK_BEM_AXIS= ( NONE )
 %
 % Actuator disk data input file name
 ACTDISK_FILENAME= actuatordisk.dat
