--- a/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP.cfg
+++ b/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP.cfg
@@ -322,13 +322,13 @@ OUTPUT_FILES= (TECPLOT_ASCII, SURFACE_TECPLOT_ASCII, RESTART)
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= ../Mesh_and_sol/aachen_turbine_3D_41blade.su2
+MESH_FILENAME= aachen_turbine_3D_41blade.su2
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
 %
 % Mesh output file
-MESH_OUT_FILENAME= ../Mesh_and_sol/aachen_turbine_3D_41blade.su2
+MESH_OUT_FILENAME= aachen_turbine_3D_41blade.su2
 %
 % Restart flow input file
 SOLUTION_FILENAME= restart_flow.dat
