add BEM_FREQ option. move local variables in place.

--- a/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
+++ b/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
@@ -116,6 +116,8 @@ MARKER_ACTDISK_BEM_AXIS= ( ACTDISK_IN, ACTDISK_OUT, 1.0, 0.0, 0.0,  1.0, 0.0, 0.
 BEM_PROP_FILENAME = prop_geom_alfclcd_data.txt
 % Propeller blade angle (Degrees) at 0.75*Radius for the current calculation
 BEM_PROP_BLADE_ANGLE = 23.9
+% BEM calculation frequency
+BEM_FREQ = 40
 %
 % Far-field boundary marker(s) (NONE = no marker)
 MARKER_FAR= ( Farfield )
