--- a/config_template.cfg
+++ b/config_template.cfg
@@ -965,6 +965,9 @@ BEM_PROP_FILENAME = prop_geom_alfclcd_data.txt
 % Propeller blade angle (degrees) at (0.75 * radius)
 BEM_PROP_BLADE_ANGLE = 25.0
 %
+% BEM calculation frequency
+BEM_FREQ = 40
+%
 % Supersonic inlet boundary marker(s) (NONE = no marker)
 % Format: (inlet marker, temperature, static pressure, velocity_x,
 %           velocity_y, velocity_z, ... ), i.e. primitive variables specified.
