--- a/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
+++ b/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
@@ -6,251 +6,116 @@
 % Institution: Computational and Theoretical Fluid Dynamics (CTFD),            %
 %              CSIR - National Aerospace Laboratories, Bangalore               %
 %              Academy of Scientific and Innovative Research, Ghaziabad        %
-% Comments :
+% Comments :                                                                   %
 % Date: 23/09/2023                                                             %
-% File Version 8.0.0 "Harrier"                                               %
+% File Version 8.0.0 "Harrier"                                                 %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %----------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION -------------------------%
 SOLVER= RANS
-%
-% Specify turbulence model (NONE, SA, SST)
 KIND_TURB_MODEL= SA
-%
-% Turbulence intensity at freestream
 %FREESTREAM_TURBULENCEINTENSITY=0.01
-%
-% Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
 MATH_PROBLEM= DIRECT
-%
-% Restart solution (NO, YES)
 RESTART_SOL= NO
-%
-% System of measurements (SI, US)
-% International system of units (SI): ( meters, kilograms, Kelvins,
-%                                       Newtons = kg m/s^2, Pascals = N/m^2,
-%                                       Density = kg/m^3, Speed = m/s,
-%                                       Equiv. Area = m^2 )
 SYSTEM_MEASUREMENTS= SI
+
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
-% Mach number (non-dimensional, based on the free-stream values)
 MACH_NUMBER= 0.11617164
-%
-% Angle of attack (degrees, only for compressible flows)
 AOA= 0.0
-%
-% Side-slip angle (degrees, only for compressible flows)
 SIDESLIP_ANGLE= 0.0
-%
-% Reynolds number (non-dimensional, based on the free-stream values)
 REYNOLDS_NUMBER= 0.62E6
-%
-% Reynolds length (1 m, 1 inch by default)
 REYNOLDS_LENGTH= 0.237
-%
 FREESTREAM_TEMPERATURE= 295
-% Viscosity model (SUTHERLAND, CONSTANT_VISCOSITY).
 VISCOSITY_MODEL= CONSTANT_VISCOSITY
-%
-% Molecular Viscosity that would be constant (1.716E-5 by default)
 MU_CONSTANT= 1.84554E-5
-%
-% Sutherland Viscosity Ref (1.716E-5 default value for AIR SI)
 MU_REF= 1.716E-5
-%
-% Sutherland Temperature Ref (273.15 K default value for AIR SI)
 MU_T_REF= 273.15
-%
-% Sutherland constant (110.4 default value for AIR SI)
 SUTHERLAND_CONSTANT= 110.4
 
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
-% Reference origin for moment computation (m or in)
+%
 REF_ORIGIN_MOMENT_X = 0.0
 REF_ORIGIN_MOMENT_Y = 0.0
 REF_ORIGIN_MOMENT_Z = 0.0
-%
-% Reference length for moment non-dimensional coefficients (m or in)
 REF_LENGTH= 1.0
-%
-% Reference area for non-dimensional force coefficients (0 implies automatic
-% calculation) (m^2 or in^2)
 REF_AREA= 0.04411429
-%
-% Compressible flow non-dimensionalization (DIMENSIONAL, FREESTREAM_PRESS_EQ_ONE,
-%                                           FREESTREAM_VEL_EQ_MACH, FREESTREAM_VEL_EQ_ONE)
 REF_DIMENSIONALIZATION= DIMENSIONAL
-%
+
 % --------------- ENGINE AND ACTUATOR DISK SIMULATION -------------------------%
-% Highlite area to compute MFR (1 in by default)
+%
 HIGHLITE_AREA= 0.04411429
-%
-% Engine nu factor (SA model).
 ENGINE_NU_FACTOR= 0.0
-%
+
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
-ACTDISK_DOUBLE_SURFACE = YES
 %
-% Actuator disk boundary type (VARIABLE_LOAD, VARIABLES_JUMP, BC_THRUST,
-%                              DRAG_MINUS_THRUST)
+ACTDISK_DOUBLE_SURFACE = YES
 ACTDISK_TYPE= BLADE_ELEMENT
 ACTDISK_JUMP= DIFFERENCE
-%
-% Actuator disk boundary marker(s) with the following formats (NONE = no marker)
-% Variable Load: (inlet face marker, outlet face marker,
-%                 0.0, 0.0, RPM , 0.0, 0.0, RPM) Markers only effectively used.
-% Change the sign of RPM to change the direction of rotation of the propeller
 MARKER_ACTDISK = ( ACTDISK_IN, ACTDISK_OUT , 0.0, 0.0, 12715.2, 0.0, 0.0, 12715.2)
-%Actuator Disk CG
-%(inlet face marker, outlet face marker, X_CG of inlet, Y_CG of inlet, Z_CG of inlet ,
-% X_CG of outlet, Y_CG of outlet, Z_CG of outlet), X_CG, Y_CG, Z_CG of both inlet and
-% outlet markers should be same
 MARKER_ACTDISK_BEM_CG= ( ACTDISK_IN, ACTDISK_OUT, 0.0, 0.0, 0.0,  0.0, 0.0, 0.0 )
-%Actuator Disk Axis
-%(inlet face marker, outlet face marker,
-% axis_x, axis_y, axis_z of inlet, axis_x, axis_y, axis_z of outlet),
-% axis of both inlet and outlet markers should be same
 MARKER_ACTDISK_BEM_AXIS= ( ACTDISK_IN, ACTDISK_OUT, 1.0, 0.0, 0.0,  1.0, 0.0, 0.0 )
-% Input file containing the propeller section data and aerodynamic details of blade sections
 BEM_PROP_FILENAME = prop_geom_alfclcd_data.txt
-% Propeller blade angle (Degrees) at 0.75*Radius for the current calculation
 BEM_PROP_BLADE_ANGLE = 23.9
-% BEM calculation frequency
 BEM_FREQ = 40
-%
-% Far-field boundary marker(s) (NONE = no marker)
 MARKER_FAR= ( Farfield )
-%
+
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
-% Marker(s) of the surface in the surface flow solution file
+%
 MARKER_PLOTTING = ( ACTDISK_IN, ACTDISK_OUT )
-%
-% Marker(s) of the surface where the non-dimensional coefficients are evaluated.
 MARKER_MONITORING = ( ACTDISK_IN, ACTDISK_OUT )
-%
-% Marker(s) of the surface that is going to be analyzed in detail (massflow, average pressure, distortion, etc)
 MARKER_ANALYZE = ( ACTDISK_IN, ACTDISK_OUT )
-%
-% Method to compute the average value in MARKER_ANALYZE (AREA, MASSFLUX).
 MARKER_ANALYZE_AVERAGE = MASSFLUX
-%
+
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
-% Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
+%
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
-%
-% CFL number (initial value for the adaptive CFL number)
 CFL_NUMBER= 4.0
-%
-% Adaptive CFL number (NO, YES)
 CFL_ADAPT= NO
-%
-% Objective function in gradient evaluation   (DRAG, LIFT, SIDEFORCE, MOMENT_X,
-%                                             MOMENT_Y, MOMENT_Z, EFFICIENCY, BUFFET,
-%                                             EQUIVALENT_AREA, NEARFIELD_PRESSURE,
-%                                             FORCE_X, FORCE_Y, FORCE_Z, THRUST,
-%                                             TORQUE, TOTAL_HEATFLUX,
-%                                             MAXIMUM_HEATFLUX, INVERSE_DESIGN_PRESSURE,
-%                                             INVERSE_DESIGN_HEATFLUX, SURFACE_TOTAL_PRESSURE,
-%                                             SURFACE_MASSFLOW, SURFACE_STATIC_PRESSURE, SURFACE_MACH)
-% For a weighted sum of objectives: separate by commas, add OBJECTIVE_WEIGHT and MARKER_MONITORING in matching order.
 OBJECTIVE_FUNCTION= DRAG
-%
+
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
-% Linear solver or smoother for implicit formulations:
-% BCGSTAB, FGMRES, RESTARTED_FGMRES, CONJUGATE_GRADIENT (self-adjoint problems only), SMOOTHER.
+%
 LINEAR_SOLVER= FGMRES
-%
-% Preconditioner of the Krylov linear solver or type of smoother (ILU, LU_SGS, LINELET, JACOBI)
 LINEAR_SOLVER_PREC= ILU
-%
-% Minimum error of the linear solver for implicit formulations
 LINEAR_SOLVER_ERROR= 1E-12
-%
-% Max number of iterations of the linear solver for the implicit formulation
 LINEAR_SOLVER_ITER= 3
-%
-% Number of elements to apply the criteria
 CONV_CAUCHY_ELEMS= 1000
-%
-% Epsilon to control the series convergence
 CONV_CAUCHY_EPS= 1E-10
-%
+
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, AUSMPLUSUP,
-%                              AUSMPLUSUP2, HLLC, TURKEL_PREC, MSW, FDS, SLAU, SLAU2)
+%
 CONV_NUM_METHOD_FLOW= ROE
 MUSCL_FLOW= YES
-%
-% Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
-%
+
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
-% Convective numerical method (SCALAR_UPWIND)
+%
 CONV_NUM_METHOD_TURB= SCALAR_UPWIND
-%
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence equations.
-%           Required for 2nd order upwind schemes (NO, YES)
 MUSCL_TURB= NO
-%
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG,
-%                BARTH_JESPERSEN, VAN_ALBADA_EDGE)
 SLOPE_LIMITER_TURB= VENKATAKRISHNAN
-%
-% Time discretization (EULER_IMPLICIT)
 TIME_DISCRE_TURB= EULER_IMPLICIT
-%
+
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
-% Maximum number of iterations
+%
 ITER= 2000
-%
-% Convergence criteria (CAUCHY, RESIDUAL)
-%CONV_CRITERIA= RESIDUAL
-%
-% Min value of the residual (log10 of the residual)
 CONV_RESIDUAL_MINVAL= -8
-%
-% Start convergence criteria at iteration number
 CONV_STARTITER= 10
-%
+
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
-% Mesh input file
+%
 MESH_FILENAME= actuatordisk_bem.su2
-%
-% Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
-%
-% Mesh output file
 MESH_OUT_FILENAME= mesh_out.su2
-%
-% Restart flow input file
 SOLUTION_FILENAME= actuatordisk_bem.dat
-%
-% Output tabular file format (TECPLOT, CSV)
 TABULAR_FORMAT= CSV
-OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
-%
-% Output file convergence history (w/o extension)
 CONV_FILENAME= history_actuatordisk_bem
-%
-% Write the forces breakdown file option (NO, YES)
+OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 WRT_FORCES_BREAKDOWN= YES
-%
-% Output file with the forces breakdown
 BREAKDOWN_FILENAME= forces_breakdown_actuatordisk_bem.dat
-%
-% Output file restart flow
 RESTART_FILENAME= restart_flow_actuatordisk_bem.dat
-%
-% Output file flow (w/o extension) variables
 VOLUME_FILENAME= flow_actuatordisk_bem
-%
-% Output file surface flow coefficient (w/o extension)
 SURFACE_FILENAME= surface_flow_actuatordisk_bem
-%
-% Writing solution file frequency
 OUTPUT_WRT_FREQ= 500
-%
-% Screen output fields
 SCREEN_OUTPUT= (INNER_ITER, WALL_TIME, RMS_DENSITY, RMS_NU_TILDE, NONPHYSICAL_POINTS, LIFT, DRAG)
 HISTORY_OUTPUT= (INNER_ITER, RMS_RES, LIFT, DRAG, AERO_COEFF)
