remove duplicate entries, add deprecation statements

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -310,7 +310,7 @@ TARGET_CL= 0.80
 % Estimation of dCL/dAlpha (0.2 per degree by default)
 DCL_DALPHA= 0.2
 %
-% Damping factor for fixed CL mode
+% Value of dCm/dHi (0.05 by default)
 DCM_DIH= 0.05
 %
 % Maximum number of iterations between AoA updates
@@ -324,7 +324,8 @@ ITER_DCL_DALPHA= 500
 %
 % Evaluate the dOF_dCL or dOF_dCMy during run time
 EVAL_DOF_DCX= NO
-% Damping factor for fixed CL mode.
+%
+% Damping factor for thrust BC (actuator disk).
 NETTHRUST_DBCTHRUST= 1.0
 %
 % parameter for the definition of a complex objective function
@@ -447,20 +448,6 @@ VT_RESIDUAL_LIMITING= NO
 % NEMO Inlet Options
 INLET_TEMPERATURE_VE = 288.15
 INLET_GAS_COMPOSITION = (0.77, 0.23, 0.0, 0.0, 0.0)
-
-% --------------------------- REFERENCE VALUES FOR DEFORMATION ----------------%
-%
-% Consider a reference solution for the structure
-REFERENCE_GEOMETRY= NO
-%
-% Penalty weight value for the objective function
-REFERENCE_GEOMETRY_PENALTY= 1E6
-%
-% Reference geometry filename
-REFERENCE_GEOMETRY_FILENAME= reference_geometry.dat
-%
-% Format of the reference geometry file
-REFERENCE_GEOMETRY_FORMAT=
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
@@ -781,7 +768,7 @@ HB_PRECONDITION= NO
 % Omega_HB = 2*PI*frequency - frequencies for Harmonic Balance method
 OMEGA_HB= (0,1.0,-1.0)
 %
-% Determines if the single-zone driver is used. (TEMPORARY)
+% Determines if the single-zone driver is used. (deprecated)
 SINGLEZONE_DRIVER= NO
 %
 % Determines if the special output is written out
@@ -1964,13 +1951,13 @@ DEAD_LOAD= NO
 % pseudo static analysis (no density in dynamic analysis)
 PSEUDO_STATIC= NO
 %
-% Dynamic or static structural analysis
+% Dynamic or static structural analysis (deprecated -> use TIME_DOMAIN)
 DYNAMIC_ANALYSIS= NO
 %
-% Time Step for dynamic analysis (s)
+% Time Step for dynamic analysis (s) (deprecated -> use TIME_STEP)
 DYN_TIMESTEP= 0.0
 %
-% Total Physical Time for dual time stepping simulations (s)
+% Total Physical Time for dual time stepping simulations (s) (deprecated -> use MAX_TIME)
 DYN_TIME= 1.0
 
 % ---------------- MESH DEFORMATION PARAMETERS (NEW SOLVER) -------------------%
@@ -2472,28 +2459,3 @@ PASTIX_VERBOSITY_LEVEL= 0
 %
 % Level of fill for PaStiX incomplete LU factorization
 PASTIX_FILL_LEVEL= 1
-
-% --------------------- PYTHON PARAMETERS -----------------------%
-% DESCRIPTION: Gradient method
-%GRADIENT_METHOD
-%
-% DESCRIPTION: Geometrical Parameter
-%GEO_PARAM
-%
-% DESCRIPTION: Current value of the design variables
-%DV_VALUE_NEW
-%
-% DESCRIPTION: Previous value of the design variables
-%DV_VALUE_OLD
-%
-% DESCRIPTION: Number of partitions of the mesh
-NUMBER_PART= 1
-%
-% DESCRIPTION: Verbosity of the python scripts to Stdout
-%CONSOLE
-%
-% DESCRIPTION: Flag specifying if the mesh was decomposed
-%DECOMPOSED
-%
-% DESCRIPTION: Number of zones of the problem
-%NZONES= 1
