regression test fix

--- a/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
+++ b/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
@@ -117,5 +117,6 @@ RESTART_FILENAME= restart_flow_actuatordisk_bem.dat
 VOLUME_FILENAME= flow_actuatordisk_bem
 SURFACE_FILENAME= surface_flow_actuatordisk_bem
 OUTPUT_WRT_FREQ= 500
-SCREEN_OUTPUT= (INNER_ITER, WALL_TIME, RMS_DENSITY, RMS_NU_TILDE, NONPHYSICAL_POINTS, LIFT, DRAG)
+%SCREEN_OUTPUT= (INNER_ITER, WALL_TIME, RMS_DENSITY, RMS_NU_TILDE, NONPHYSICAL_POINTS, LIFT, DRAG)
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_NU_TILDE, LIFT, DRAG)
 HISTORY_OUTPUT= (INNER_ITER, RMS_RES, LIFT, DRAG, AERO_COEFF)
