--- a/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
+++ b/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
@@ -17,7 +17,7 @@ SOLVER= RANS
 KIND_TURB_MODEL= SA
 %FREESTREAM_TURBULENCEINTENSITY=0.01
 MATH_PROBLEM= DIRECT
-RESTART_SOL= NO
+RESTART_SOL= YES
 SYSTEM_MEASUREMENTS= SI
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
