--- a/config_template.cfg
+++ b/config_template.cfg
@@ -2146,7 +2146,7 @@ EDGE_COLORING_GROUP_SIZE= 512
 % where the requested edge color group size is not efficient. Specifically, the largest
 % edge color group size up to EDGE_COLORING_GROUP_SIZE is chosen that is at least
 % 0.875 efficient. Also, this option allows using more colors, up to 255 instead of up to 64.
-EDGE_COLORING_RELAX_DISC_ADJ= yes
+EDGE_COLORING_RELAX_DISC_ADJ= YES
 %
 % Independent "threads per MPI rank" setting for LU-SGS and ILU preconditioners.
 % For problems where time is spend mostly in the solution of linear systems (e.g. elasticity,
