--- a/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP.cfg
+++ b/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP.cfg
@@ -159,6 +159,8 @@ MARKER_SHROUD= (SHROUD1, SHROUD2, SHROUD3)
 TURBOMACHINERY_KIND= AXIAL AXIAL AXIAL 
 %
 % Uncomment to work with new_turbo_outputs
+% Specify the machine architecture for performance analysis (TURBINE, COMPRESSOR, PROPELLOR)
+%
 %TURBO_PERF_KIND= (TURBINE, TURBINE, TURBINE)
 %
 % Specify kind of interpolation for the mixing-plane (LINEAR_INTERPOLATION, NEAREST_SPAN, MATCHING)
