- changed mesh for regression case

--- a/TestCases/CGNSWrite/config.cfg
+++ b/TestCases/CGNSWrite/config.cfg
@@ -153,10 +153,10 @@ CONV_CAUCHY_EPS= 1E-6
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= mesh.cgns
+MESH_FILENAME= mesh.su2
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
-MESH_FORMAT= CGNS
+MESH_FORMAT= SU2
 %
 % Restart flow input file
 SOLUTION_FILENAME= restart_flow
