- Removed comments from regression config

--- a/TestCases/cgns_writer/config.cfg
+++ b/TestCases/cgns_writer/config.cfg
@@ -1,144 +1,73 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Transonic simulation RAE2822 (RANS)                        %
-% Author: Francisco Palacios                                                   %
-% Institution: Stanford University                                             %
-% Date: 5/15/2013                                                              %
-% File Version 7.4.0 "Blackbird"                                                %
+% Case description: Subsonic U-Turn                                            %
+% Author: Andrea Rausa                                                         %
+% Institution: Politecnico di Milano                                           %
+% Date: 12/2/2023                                                              %
+% File Version 8.0.0 "Harrier"                                                 %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
-% Physical governing equations (EULER, NAVIER_STOKES,
-%                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
-%                               POISSON_EQUATION)
 SOLVER= RANS
-%
-% Specify turbulent model (NONE, SA, SA_NEG, SST)
 KIND_TURB_MODEL= SST
-%
-% Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
-%
-% Restart solution (NO, YES)
 RESTART_SOL= NO
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
-% Mach number (non-dimensional, based on the free-stream values)
 MACH_NUMBER= 0.2
-% AirSpeed = 279.9663
-% Density = 1.225
-%
-% Angle of attack (degrees, only for compressible flows)
 AOA= 0.0
-% Free-stream temperature (288.15 K by default)
 FREESTREAM_TEMPERATURE= 270.0
-%
-% Reynolds number (non-dimensional, based on the free-stream values)
 REYNOLDS_NUMBER= 3.28E6
-%
-% Reynolds length (1 m by default)
 REYNOLDS_LENGTH= 1
 REF_DIMENSIONALIZATION= FREESTREAM_VEL_EQ_MACH
 
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
-% Reference origin for moment computation
 REF_ORIGIN_MOMENT_X = -0.2473
 REF_ORIGIN_MOMENT_Y = 0.00
 REF_ORIGIN_MOMENT_Z = 0.00
-%
-% Reference length for pitching, rolling, and yawing non-dimensional moment
 REF_LENGTH= 1
-%
-% Reference area for force coefficients (0 implies automatic calculation)
-% Body tube cross-area
 REF_AREA= 1
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-% Navier-Stokes wall boundary marker(s) (NONE = no marker)
 MARKER_HEATFLUX= ( OuterWall, 0.0, InnerWall, 0.0 )
-%
-% Farfield boundary marker(s) (NONE = no marker)
 MARKER_FAR= ( Inlet, Outlet )
-
-%
-%
-% Marker(s) of the surface to be plotted or designed
 MARKER_PLOTTING= ( InnerWall )
-%
-% Marker(s) of the surface where the functional (Cd, Cl, etc.) will be evaluated
 MARKER_MONITORING= ( InnerWall )
-
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
 LINEAR_SOLVER= FGMRES
 LINEAR_SOLVER_PREC= ILU
 LINEAR_SOLVER_ERROR= 1.0e-6
-% lower memory consumption:
 LINEAR_SOLVER_ITER= 15
-%
+
 % -------------------------- MULTIGRID PARAMETERS -----------------------------%
 %
-
-NEWTON_KRYLOV= NO
-NEWTON_KRYLOV_IPARAM= (10, 5, 2) % n0, np, ft
-NEWTON_KRYLOV_DPARAM= (1.0, 0.01, -6, 1e-5) % r0, tp, rf, e
 CFL_ADAPT= YES
 CFL_NUMBER= 1
 CFL_REDUCTION_TURB= 1.0
-%
 CFL_ADAPT_PARAM= ( 0.5, 1.01, 1.0, 5, 0.0001)
-
 ITER= 1
-
-MGLEVEL= 0
-%
-MGCYCLE= V_CYCLE
-MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
-MG_POST_SMOOTH= ( 1, 1, 1, 1 )
-MG_CORRECTION_SMOOTH= ( 1, 1, 1, 1 )
-MG_DAMP_RESTRICTION= 0.5
-MG_DAMP_PROLONGATION= 0.5
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
 CONV_NUM_METHOD_FLOW= ROE
 USE_VECTORIZATION= YES
-%
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
-%           Required for 2nd order upwind schemes (NO, YES)
 MUSCL_FLOW= NO
-%
-% Slope limiter (VENKATAKRISHNAN, MINMOD)
 SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
-%
-% Coefficient for the limiter (smooth regions)
 VENKAT_LIMITER_COEFF= 0.03
-%
-% 2nd and 4th order artificial dissipation coefficients
-JST_SENSOR_COEFF= ( 0.5, 0.02 )
-%
-% Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
 
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
 %
-% Convective numerical method (SCALAR_UPWIND)
 CONV_NUM_METHOD_TURB= SCALAR_UPWIND
-%
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence equations.
-%           Required for 2nd order upwind schemes (NO, YES)
 MUSCL_TURB= NO
-%
-% Time discretization (EULER_IMPLICIT)
 TIME_DISCRE_TURB= EULER_IMPLICIT
 
 
@@ -148,38 +77,18 @@ CONV_FIELD= MOMENT_X
 CONV_STARTITER= 10
 CONV_CAUCHY_ELEMS= 100
 CONV_CAUCHY_EPS= 1E-6
-%
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
-% Mesh input file
 MESH_FILENAME= mesh.su2
-%
-% Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
-%
-% Restart flow input file
 SOLUTION_FILENAME= restart_flow
-%
 TABULAR_FORMAT= CSV
-%
-% Output file convergence history (w/o extension)
 CONV_FILENAME= history_First
-%
-% Output file restart flow
 RESTART_FILENAME= restart_flow
-%
-% Output file flow (w/o extension) variables
 VOLUME_FILENAME= flow
-%
-% Output file surface flow coefficient (w/o extension)
 SURFACE_FILENAME= surface_flow
-%
-% Writing solution file frequency
 OUTPUT_WRT_FREQ= 100
-%
-%
-% Screen output fields
 SCREEN_OUTPUT= (INNER_ITER, WALL_TIME, RMS_DENSITY, LIFT, DRAG, MOMENT_Z)
 OUTPUT_FILES= (SURFACE_CGNS)
 WRT_FORCES_BREAKDOWN= NO
