Addition of START_TIME option + variable
Includes a getter method in CConfig

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -143,6 +143,10 @@ TIME_STEP= 0.0
 % Total Physical Time for dual time stepping simulations (s)
 MAX_TIME= 50.0
 %
+% Start time for dual time stepping simulations
+% = -1 for default calculation (START_TIME=RESTART_ITER*TIME_STEP)
+START_TIME=-1
+%
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
 %
