--- a/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_restart.cfg
+++ b/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_restart.cfg
@@ -139,7 +139,7 @@ CONV_CAUCHY_EPS= 1E-6
 %
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
-SCREEN_OUTPUT= INNER_ITER, RMS_RES, SURFACE_PRESSURE_DROP
+SCREEN_OUTPUT= INNER_ITER, RMS_RES, SURFACE_PRESSURE_DROP, MassFlowOut_1, TotalStaticEfficiency
 MESH_FILENAME= mesh_stator_turb.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= su2mesh_per.su2
