Added config option for preferential diffusion model

--- a/TestCases/flamelet/07_laminar_premixed_h2_flame_cfd/laminar_premixed_h2_flame_cfd.cfg
+++ b/TestCases/flamelet/07_laminar_premixed_h2_flame_cfd/laminar_premixed_h2_flame_cfd.cfg
@@ -33,6 +33,7 @@ DIFFUSIVITY_MODEL= FLAMELET
 KIND_SCALAR_MODEL= FLAMELET
 INTERPOLATION_METHOD= MLP
 FILENAMES_INTERPOLATOR= (MLP_TD.mlp, MLP_PD.mlp, MLP_PPV.mlp, MLP_null.mlp)
+PREFERENTIAL_DIFFUSION= YES
 
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
