--- a/config_template.cfg
+++ b/config_template.cfg
@@ -911,6 +911,14 @@ CONTROLLING_VARIABLE_SOURCE_NAMES= (ProdRateTot_PV, NULL)
 % By default, this option is set to NONE
 FLAME_INIT_METHOD= FLAME_FRONT
 
+% Enable preferential diffusion for progress variable, total enthalpy, mixture fraction FGM problems.
+% If 'YES', the preferential diffusion model from Efimov et al.(2021) is used for computing the viscous residual terms.
+% If enabled, make sure the variables "Beta_ProgVar", "Beta_Enth_Thermal", "Beta_Enth", and "Beta_MixFrac", corresponding
+% to the preferential diffusion terms of the progress variable, temperature, total enthalpy, and mixture fraction
+% respectively are included in the manifold.
+% By default, this option is disabled.
+PREFERENTIAL_DIFFUSION= NO
+
 % FLAME_FRONT initialization
 % the flame is initialized using a plane, defined by a point and a normal. On one side, the solution is initialized
 % using 'burnt' conditions and on the other side 'unburnt' conditions. The normal points in the direction of the 'burnt'
