--- a/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP.cfg
+++ b/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP.cfg
@@ -161,7 +161,7 @@ TURBOMACHINERY_KIND= AXIAL AXIAL AXIAL
 % Uncomment to work with new_turbo_outputs
 % Specify the machine architecture for performance analysis (TURBINE, COMPRESSOR, PROPELLOR)
 %
-%TURBO_PERF_KIND= (TURBINE, TURBINE, TURBINE)
+TURBO_PERF_KIND= (TURBINE, TURBINE, TURBINE)
 %
 % Specify kind of interpolation for the mixing-plane (LINEAR_INTERPOLATION, NEAREST_SPAN, MATCHING)
 MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
