--- a/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
+++ b/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
@@ -159,7 +159,7 @@ MARKER_SHROUD= (SHROUD1, SHROUD2, SHROUD3)
 TURBOMACHINERY_KIND= AXIAL AXIAL AXIAL 
 %
 % Uncomment to work with new_turbo_outputs
-%TURBO_PERF_KIND= (TURBINE, TURBINE, TURBINE)
+TURBO_PERF_KIND= (TURBINE, TURBINE, TURBINE)
 %
 % Specify kind of interpolation for the mixing-plane (LINEAR_INTERPOLATION, NEAREST_SPAN, MATCHING)
 MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
