--- a/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
+++ b/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
@@ -12,9 +12,7 @@
 %
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
-% Physical governing equations (EULER, NAVIER_STOKES,
-%                               WAVE_EQUATION, HEAT_EQUATION, LINEAR_ELASTICITY,
-%                               POISSON_EQUATION)                         
+% Physical governing equations                       
 SOLVER= RANS
 %
 % Specify turbulent model (NONE, SA, SST)
@@ -71,8 +69,7 @@ REF_ORIGIN_MOMENT_Z = 0.00
 % Reference area for force coefficients (0 implies automatic calculation)
 REF_AREA= 1.0
 %
-% Flow non-dimensionalization (DIMENSIONAL, FREESTREAM_PRESS_EQ_ONE,
-%                              FREESTREAM_VEL_EQ_MACH, FREESTREAM_VEL_EQ_ONE)
+% Flow non-dimensionalization 
 REF_DIMENSIONALIZATION= DIMENSIONAL
 %
 %
@@ -211,7 +208,7 @@ CFL_ADAPT_PARAM= ( 1.3, 1.2, 1.0, 10.0)
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
-% Linear solver or smoother for implicit formulations (BCGSTAB, FGMRES, SMOOTHER_JACOBI, SMOOTHER_ILU0, SMOOTHER_LUSGS, SMOOTHER_LINELET)
+% Linear solver or smoother for implicit formulations 
 LINEAR_SOLVER= FGMRES
 %
 % Preconditioner of the Krylov linear solver (ILU, LU_SGS, LINELET, JACOBI)
@@ -233,13 +230,12 @@ LIMITER_ITER= 999999
 %
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
+% Convective numerical method 
 CONV_NUM_METHOD_FLOW= ROE
 ENTROPY_FIX_COEFF= 0.001
 %
 JST_SENSOR_COEFF= ( 0.5, 0.25 )
-% Spatial numerical order integration (1ST_ORDER, 2ND_ORDER, 2ND_ORDER_LIMITER)
+% Spatial numerical order integration 
 MUSCL_FLOW= NO
 %
 % Slope limiter (VENKATAKRISHNAN, VAN_ALBADA)
@@ -254,7 +250,7 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % Convective numerical method (SCALAR_UPWIND)
 CONV_NUM_METHOD_TURB= SCALAR_UPWIND
 %
-% Spatial numerical order integration (1ST_ORDER, 2ND_ORDER, 2ND_ORDER_LIMITER)
+% Spatial numerical order integration
 MUSCL_TURB= NO
 %
 % Slope limiter (VENKATAKRISHNAN, MINMOD)
@@ -314,7 +310,7 @@ OUTPUT_FILES= (TECPLOT_ASCII, SURFACE_TECPLOT_ASCII, RESTART)
 % Mesh input file
 MESH_FILENAME= Aachen_3D_41_blade_coarse.su2
 %
-% Mesh input file format (SU2, CGNS, NETCDF_ASCII)
+% Mesh input file format
 MESH_FORMAT= SU2
 %
 % Mesh output file
@@ -326,7 +322,7 @@ SOLUTION_FILENAME= restart_flow.dat
 % Restart adjoint input file
 SOLUTION_ADJ_FILENAME= restart_adj.dat
 %
-% Output file format (PARAVIEW, TECPLOT, STL)
+% Output file format 
 TABULAR_FORMAT= TECPLOT
 %
 % Output file convergence history (w/o extension)
