--- a/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
+++ b/TestCases/turbomachinery/Aachen_turbine/aachen_3D_MP_restart.cfg
@@ -4,8 +4,7 @@
 % Case description: AACHEN turbine 3D                                          %
 % Author: S. Vitale, A. Cappiello                                              %
 % Institution: Delft University of Technology                                  %
-% Date: Oct 20th, 2023                                                         %
-% File Version 8.0 develop                                        %
+% Date: Oct 20th, 2023                                                         %                                      %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
